--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "parcel": "^2.13.2",
     "supertest": "^7.0.0"
   },
   "jest": {
